# backend/docs/swagger.yaml
@@ -4,6 +4,18 @@ definitions:
       name:
         type: string
     type: object
+  controller.GetRoleResponse:
+    properties:
+      role:
+        $ref: '#/definitions/entity.Role'
+    type: object
+  controller.GetRolesResponse:
+    properties:
+      roles:
+        items:
+          $ref: '#/definitions/entity.Role'
+        type: array
+    type: object
   controller.GetUserResponse:
     properties:
       user:
@@ -19,6 +31,13 @@ definitions:
   entity.ErrorResponse:
     properties:
       message:
+        type: string
+    type: object
+  entity.Role:
+    properties:
+      id:
+        type: string
+      name:
         type: string
     type: object
   entity.User:
@@ -45,15 +64,17 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/controller.GetRolesResponse'
         "401":
           description: Unauthorized
           schema:
-            type: objec
+            $ref: '#/definitions/entity.ErrorResponse'
         "404":
           description: Not Found
           schema:
             $ref: '#/definitions/entity.ErrorResponse'
-      summary: ロール取得 API
+      summary: 全ロール取得 API
       tags:
       - Role
     post:
@@ -69,8 +90,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
         "400":
           description: Bad Request
           schema:
@@ -80,6 +101,34 @@ paths:
           schema:
             $ref: '#/definitions/entity.ErrorResponse'
       summary: ロール作成 API
+      tags:
+      - Role
+  /roles/{roleId}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: ロール ID
+        in: path
+        name: roleId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.GetRoleResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      summary: ロール取得 API
       tags:
       - Role
   /users:
@@ -93,6 +142,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/controller.GetUsersResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
       summary: 全ユーザー取得 API
       tags:
       - User
@@ -101,7 +158,7 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: ユーザーID
+      - description: ユーザー ID
         in: path
         name: userId
         required: true
